# quantum_hack

./: README.md  main.py  pyproject.toml
funs/: classical_opt.ipynb  data_plot.ipynb  input_data.csv  note_jh.ipynb  quantum_opt.ipynb
